--- a/src/css/2-hero.css
+++ b/src/css/2-hero.css
@@ -42,11 +42,14 @@
   text-transform: uppercase;
   text-align: left;
 
+  max-width: 335px;
   margin-bottom: 20px;
 }
 @media screen and (min-width: 768px) {
   .hero-title {
     font-size: 76px;
+
+    max-width: 705px;
     margin-bottom: 25px;
   }
 }
@@ -59,11 +62,13 @@
 
 .hero-text {
   line-height: 1.29;
+  max-width: 335px;
 }
 @media screen and (min-width: 768px) {
   .hero-text {
     font-size: 16px;
     line-height: 1.25;
+
     max-width: 603px;
   }
 }
@@ -75,7 +80,7 @@
 
 .hero-background {
   width: 100%;
-  height: 100vh;
+  height: 370px;
 
   background-image: image-set(
     url(../img/2-hero/bg-mob@1x.jpg) 1x,
@@ -87,7 +92,7 @@
 }
 @media screen and (min-width: 768px) {
   .hero-background {
-    height: 100%;
+   height: 539px;
     background-image: image-set(
       url(../img/2-hero/bg-tab@1x.jpg) 1x,
       url(..//img/2-hero/bg-tab@2x.jpg) 2x
@@ -97,6 +102,7 @@
 @media screen and (min-width: 1280px) {
   .hero-background {
     width: 50%;
+    height: 100%;
     background-image: image-set(
       url(../img/2-hero/bg-desk@1x.jpg) 1x,
       url(..//img/2-hero/bg-desk@2x.jpg) 2x
