--- a/src/css/common.css
+++ b/src/css/common.css
@@ -17,7 +17,7 @@ body {
 }
 
 .container {
-  /* min-width: 320px; */
+  min-width: 320px;
   margin: 0 auto;
   padding: 0 20px;
   outline: 1px solid red;
@@ -27,6 +27,7 @@ body {
 @media screen and (max-width: 375px) {
   .container {
     min-width: 320px;
+
   }
 }
 
@@ -42,7 +43,7 @@ body {
 
 @media screen and (min-width: 1280px) {
   .container {
-    max-width: 1280px;
+    width: 1280px;
     padding: 0 100px;
   }
 }
