--- a/src/css/5-vegetables.css
+++ b/src/css/5-vegetables.css
@@ -59,13 +59,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
   gap: 20px;
 }
 @media screen and (min-width: 768px) {
   .vegetables-list {
-    justify-content: space-around;
-    flex-direction: row;
+    flex-direction:row;
     flex-wrap: wrap;
     gap: 28px 20px;
   }
@@ -93,6 +91,7 @@
 
 .vegetables-img {
   transition: transform 1s;
+  margin: 0 auto;
 }
 .vegetables-item:hover .vegetables-img {
   transform: scale(1.2);
