--- a/src/css/6-reviews.css
+++ b/src/css/6-reviews.css
@@ -10,12 +10,12 @@
 @media only screen and (min-width: 768px) {
   .reviews-container {
    padding-top: 100px;
-  padding-bottom: 100px;
+   padding-bottom: 100px;
   }
 }
 
 .reviews-title {
-  width: 100%;
+  max-width: 335px;
 
   font-size: 48px;
   font-weight: 600;
@@ -32,13 +32,13 @@
     font-size: 64px;
     line-height: 1;
     
-    width: 553px;
+    max-width: 553px;
     margin-bottom: 25px;
   }
 }
 
 .reviews-text {
-  width: 100%;
+  max-width: 335px;
 
   line-height: 1.29;
 
@@ -47,7 +47,7 @@
 
 @media only screen and (min-width: 768px) {
   .reviews-text {
-    width: 553px;
+    max-width: 553px;
 
     font-size: 16px;
     line-height: 1.25;
@@ -58,6 +58,7 @@
 
 .reviews-sliders-wrapper {
   position: relative;
+
 }
 @media only screen and (min-width: 768px) {
   .reviews-sliders-wrapper {
@@ -111,12 +112,14 @@
   width: 25px;
   height: 25px;
 }
+.reviews-list {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
 @media only screen and (min-width: 768px) {
   .reviews-list {
-    display: flex;
-    justify-content: center;
-    align-items: center;
     gap: 18px;
   }
 }
@@ -127,7 +130,7 @@
 }
 
 .reviews-items {
-  width: 100%;
+  max-width: 335px;
   border-radius: 24px;
   border: 1px solid rgba(122, 49, 69, 0.3);
   padding: 20px;
@@ -170,6 +173,7 @@
   line-height: 1.29;
   text-align: center;
 
+  max-width: 288px;
   height: 72px;
 }
 @media only screen and (min-width: 768px) {
