--- a/src/css/common.css
+++ b/src/css/common.css
@@ -26,8 +26,7 @@ body {
 
 @media screen and (max-width: 375px) {
   .container {
-    min-width: 320px;
-
+    max-width: 375px;
   }
 }
 
@@ -36,14 +35,14 @@ body {
     font-size: 16px;
   }
   .container {
-    min-width: 768px;
+    max-width: 768px;
     padding: 0 32px;
   }
 }
 
 @media screen and (min-width: 1280px) {
   .container {
-    width: 1280px;
+    max-width:  1280px;
     padding: 0 100px;
   }
 }
