--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -3,10 +3,10 @@
     <nav class="header-nav">
       <a class="header-nav-logo" href="./index.html" aria-label="logo">
         <svg class="logo-svg" width="16" height="16">
-          <use href="/img/icons.svg#logo"></use>
+          <use href="../img/icons.svg#logo"></use>
         </svg>
         <svg class="logo-text" width="148" height="12">
-          <use href="/img/icons.svg#logo-text"></use>
+          <use href="../img/icons.svg#logo-text"></use>
         </svg>
       </a>
       <ul class="header-nav-list">
@@ -30,7 +30,7 @@
         width="32" height="32"
       >
         <svg class="nav-btn-mob-icon" width="21" height="16">
-          <use href="./img/icons.svg#icon-menu-mob"></use>
+          <use href="../img/icons.svg#icon-menu-mob"></use>
         </svg>
       </button>
     </nav>
