--- a/src/partials/3-how_it_works.html
+++ b/src/partials/3-how_it_works.html
@@ -4,17 +4,17 @@
       <picture>
         <!-- desctop 1280 -->
         <source media="(min-width: 1280px)" srcset="
-              ../img/3-how_it_works/img-desk@1x.png 1x,
-              ../img/3-how_it_works/img-desk@2x.png 2x">
+              /img/3-how_it_works/img-desk@1x.png 1x,
+              /img/3-how_it_works/img-desk@2x.png 2x">
         <!-- tablet 768 -->
         <source media="(min-width: 768px)" srcset="
-              ../img/3-how_it_works/img-tab@1x.png 1x,
-              ../img/3-how_it_works/img-tab@2x.png 2x">
+              /img/3-how_it_works/img-tab@1x.png 1x,
+              /img/3-how_it_works/img-tab@2x.png 2x">
         <!-- mobile 320 -->
         <source media="(min-width: 320px)" srcset="
-              ../img/3-how_it_works/img-mob@1x.png 1x,
-              ../img/3-how_it_works/img-mob@2x.png 2x">
-        <img class="hiw-image" src="../img/3-how_it_works/img-mob@1x.png" alt="how it works" width="335" height="450"
+              /img/3-how_it_works/img-mob@1x.png 1x,
+              /img/3-how_it_works/img-mob@2x.png 2x">
+        <img class="hiw-image" src="/img/3-how_it_works/img-mob@1x.png" alt="how it works" width="335" height="450"
           loading="lazy">
       </picture>
     </div>
