--- a/src/partials/5-vegetables.html
+++ b/src/partials/5-vegetables.html
@@ -16,13 +16,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-               ../img/5-vegetables/img1-mob@1x.png 1x,
-               ../img/5-vegetables/img1-mob@2x.png 2x">
+               /img/5-vegetables/img1-mob@1x.png 1x,
+               /img/5-vegetables/img1-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-               ../img/5-vegetables/img1-td@1x.png 1x,
-               ../img/5-vegetables/img1-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img1-mob@1x.png" alt="eggplant" width="282" height="243">
+               /img/5-vegetables/img1-td@1x.png 1x,
+               /img/5-vegetables/img1-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img1-mob@1x.png" alt="eggplant" width="282" height="243">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -32,13 +32,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-               ../img/5-vegetables/img2-mob@1x.png 1x,
-               ../img/5-vegetables/img2-mob@2x.png 2x">
+               /img/5-vegetables/img2-mob@1x.png 1x,
+               /img/5-vegetables/img2-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                  ../img/5-vegetables/img2-td@1x.png 1x,
-                  ../img/5-vegetables/img2-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img2-mob@1x.png" alt="leek" width="282" height="243">
+                  /img/5-vegetables/img2-td@1x.png 1x,
+                  /img/5-vegetables/img2-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img2-mob@1x.png" alt="leek" width="282" height="243">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -48,13 +48,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-              ../img/5-vegetables/img3-mob@1x.png 1x,
-              ../img/5-vegetables/img3-mob@2x.png 2x">
+              /img/5-vegetables/img3-mob@1x.png 1x,
+              /img/5-vegetables/img3-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ../img/5-vegetables/img3-td@1x.png 1x,
-                ../img/5-vegetables/img3-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img3-mob@1x.png" alt="mushrooms" width="282"
+                ./img/5-vegetables/img3-td@1x.png 1x,
+                ./img/5-vegetables/img3-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img3-mob@1x.png" alt="mushrooms" width="282"
             height="243">
         </picture>
       </li>
@@ -65,13 +65,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-                ../img/5-vegetables/img4-mob@1x.png 1x,
-                ../img/5-vegetables/img4-mob@2x.png 2x">
+                /img/5-vegetables/img4-mob@1x.png 1x,
+                /img/5-vegetables/img4-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ../img/5-vegetables/img4-td@1x.png 1x,
-                ../img/5-vegetables/img4-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img4-mob@1x.png" alt="corn" width="282" height="243">
+                ./img/5-vegetables/img4-td@1x.png 1x,
+                ./img/5-vegetables/img4-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img4-mob@1x.png" alt="corn" width="282" height="243">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -81,13 +81,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-                ../img/5-vegetables/img5-mob@1x.png 1x,
-                ../img/5-vegetables/img5-mob@2x.png 2x">
+                /img/5-vegetables/img5-mob@1x.png 1x,
+                /img/5-vegetables/img5-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ../img/5-vegetables/img5-td@1x.png 1x,
-                ../img/5-vegetables/img5-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img5-mob@1x.png" alt="potatoes" width="282" height="243">
+                ./img/5-vegetables/img5-td@1x.png 1x,
+                ./img/5-vegetables/img5-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img5-mob@1x.png" alt="potatoes" width="282" height="243">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -96,13 +96,13 @@
         <picture>
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-                ../img/5-vegetables/img6-mob@1x.png 1x,
-                ../img/45-egetables/img6-mob@2x.png 2x">
+                /img/5-vegetables/img6-mob@1x.png 1x,
+                /img/45-egetables/img6-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ../img/5-vegetables/img6-td@1x.png 1x,
-                ../img/5-vegetables/img6-td@2x.png 2x">
-          <img class="vegetables-img" src="../img/5-vegetables/img6-mob@1x.png" alt="carrot" width="282" height="243">
+                /img/5-vegetables/img6-td@1x.png 1x,
+                /img/5-vegetables/img6-td@2x.png 2x">
+          <img class="vegetables-img" src="/img/5-vegetables/img6-mob@1x.png" alt="carrot" width="282" height="243">
         </picture>
       </li>
     </ul>
