--- a/src/partials/6-reviews.html
+++ b/src/partials/6-reviews.html
@@ -19,9 +19,9 @@
       <ul class="reviews-list">
         <li class="reviews-items">
           <img class="reviews-items-avatar" srcset="
-                ../img/6-reviews/Img1@1x.png 1x,
-                ../img/6-reviews/Img1@2x.png 2x
-              " src="../img/6-reviews/Img1@1x.png" alt="John Wax" width="56" height="56" />
+                /img/6-reviews/Img1@1x.png 1x,
+                /img/6-reviews/Img1@2x.png 2x
+              " src="/img/6-reviews/Img1@1x.png" alt="John Wax" width="56" height="56" />
           <h3 class="reviews-items-subject">John Wax</h3>
           <p class="reviews-items-desc">
             These vegetables are my secret to delicious and healthy meals. The
@@ -31,9 +31,9 @@
         </li>
         <li class="reviews-items">
           <img class="reviews-items-avatar" srcset="
-                ../img/6-reviews/Img2@1x.png 1x,
-                ../img/6-reviews/Img2@1x.png 2x
-              " src="../img/6-reviews/Img2@1x.png" alt="Victoria Romashenko" width="56" height="56" />
+                /img/6-reviews/Img2@1x.png 1x,
+                /img/6-reviews/Img2@1x.png 2x
+              " src="/img/6-reviews/Img2@1x.png" alt="Victoria Romashenko" width="56" height="56" />
           <h3 class="reviews-items-subject">Victoria Romashenko</h3>
           <p class="reviews-items-desc">
             I love how fast and fresh the vegetables are delivered. Salads
@@ -43,9 +43,9 @@
         </li>
         <li class="reviews-items">
           <img class="reviews-items-avatar" srcset="
-                ../img/6-reviews/Img3@1x.png 1x,
-                ../img/6-reviews/Img3@1x.png 2x
-              " src="../img/6-reviews/Img3@1x.png" alt="Ihor Trachuk" width="56" height="56" />
+                /img/6-reviews/Img3@1x.png 1x,
+                /img/6-reviews/Img3@1x.png 2x
+              " src="/img/6-reviews/Img3@1x.png" alt="Ihor Trachuk" width="56" height="56" />
           <h3 class="reviews-items-subject">Ihor Trachuk</h3>
           <p class="reviews-items-desc">
             Recently tried my fresh tomatoes and peppers - amazing! The
