--- a/src/partials/7-your_order.html
+++ b/src/partials/7-your_order.html
@@ -49,21 +49,20 @@
         <picture>
           <!-- desctop 1280 -->
           <source media="(min-width: 1280px)" srcset="
-              ../img/7-your_order/order-desk@1x.png 1x,
-              ../img/7-your_order/order-desk@2x.png 2x
+              /img/7-your_order/order-desk@1x.png 1x,
+              /img/7-your_order/order-desk@2x.png 2x
             " />
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-              ../img/7-your_order/order-tab@1x.png 1x,
-              ../img/7-your_order/order-tab@2x.png 2x
+              /img/7-your_order/order-tab@1x.png 1x,
+              /img/7-your_order/order-tab@2x.png 2x
             " />
           <!-- mobile 320 -->
           <source media="(min-width: 320px)" srcset="
-              ../img/7-your_order/order-mob@1x.png 1x,
-              ../img/7-your_order/order-mob@2x.png 2x
+              /img/7-your_order/order-mob@1x.png 1x,
+              /img/7-your_order/order-mob@2x.png 2x
             " />
-
-          <img class="order-social-img" src="../img/7-your_order/order-mob@1x.png" alt="soc-background" width="295"
+          <img class="order-social-img" src="/img/7-your_order/order-mob@1x.png" alt="soc-background" width="295"
             height="273" />
         </picture>
         <p class="order-social-text">Follow us on our social networks:</p>
