--- a/src/partials/5-vegetables.html
+++ b/src/partials/5-vegetables.html
@@ -52,8 +52,8 @@
               /img/5-vegetables/img3-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ./img/5-vegetables/img3-td@1x.png 1x,
-                ./img/5-vegetables/img3-td@2x.png 2x">
+                /img/5-vegetables/img3-td@1x.png 1x,
+                /img/5-vegetables/img3-td@2x.png 2x">
           <img class="vegetables-img" src="/img/5-vegetables/img3-mob@1x.png" alt="mushrooms" width="282"
             height="243">
         </picture>
@@ -69,8 +69,8 @@
                 /img/5-vegetables/img4-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ./img/5-vegetables/img4-td@1x.png 1x,
-                ./img/5-vegetables/img4-td@2x.png 2x">
+                /img/5-vegetables/img4-td@1x.png 1x,
+                /img/5-vegetables/img4-td@2x.png 2x">
           <img class="vegetables-img" src="/img/5-vegetables/img4-mob@1x.png" alt="corn" width="282" height="243">
         </picture>
       </li>
@@ -85,8 +85,8 @@
                 /img/5-vegetables/img5-mob@2x.png 2x">
           <!-- tablet 768 -->
           <source media="(min-width: 768px)" srcset="
-                ./img/5-vegetables/img5-td@1x.png 1x,
-                ./img/5-vegetables/img5-td@2x.png 2x">
+                /img/5-vegetables/img5-td@1x.png 1x,
+                /img/5-vegetables/img5-td@2x.png 2x">
           <img class="vegetables-img" src="/img/5-vegetables/img5-mob@1x.png" alt="potatoes" width="282" height="243">
         </picture>
       </li>
