correct a aria-label

--- a/src/css/2-hero.css
+++ b/src/css/2-hero.css
@@ -89,6 +89,8 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+
+  background: linear-gradient(0deg, rgba(20, 20, 20, 0.20) 0%, rgba(20, 20, 20, 0.20) 100%), url(/img/2-hero/bg-mob@1x.jpg) lightgray -21.701px -17.796px / 115.12% 121.468% no-repeat;
 }
 @media screen and (min-width: 768px) {
   .hero-background {
@@ -96,15 +98,22 @@
     background-image: image-set(
       url(/img/2-hero/bg-tab@1x.jpg) 1x,
       url(/img/2-hero/bg-tab@2x.jpg) 2x
-    );
+      );
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
   }
 }
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1279px) {
   .hero-background {
     width: 50%;
+    height: 100%;
     background-image: image-set(
       url(/img/2-hero/bg-desk@1x.jpg) 1x,
       url(/img/2-hero/bg-desk@2x.jpg) 2x
-    );
+      );
+      background-repeat: no-repeat;
+      background-position: center;
+      background-size: cover;
   }
 }
