--- a/src/partials/7-your_order.html
+++ b/src/partials/7-your_order.html
@@ -63,7 +63,7 @@
               /img/7-your_order/order-mob@2x.png 2x
             " />
           <img class="order-social-img" src="/img/7-your_order/order-mob@1x.png" alt="soc-background" width="295"
-            height="273" />
+            height="273" loading="lazy" />
         </picture>
         <p class="order-social-text">Follow us on our social networks:</p>
         <ul class="order-social-list">
