--- a/src/css/6-reviews.css
+++ b/src/css/6-reviews.css
@@ -1,5 +1,5 @@
 .reviews-section {
-  background: #fbfbfb;
+  background-color: #fbfbfb;
   color: #141414;
 }
 
@@ -58,12 +58,8 @@
 
 .reviews-sliders-wrapper {
   position: relative;
-
-}
-@media only screen and (min-width: 768px) {
-  .reviews-sliders-wrapper {
-    width: fit-content;
-  }
+  width: fit-content;
+  margin: 0 auto;
 }
 
 .btn-prev-js,
@@ -85,23 +81,21 @@
   fill: #576f35;
 }
 .btn-prev-js {
-  left: -20px;
+  left: -23px;
 }
 .btn-next-js {
-  right: -20px;
+  right: -23px;
 }
 @media only screen and (min-width: 768px) {
   .btn-prev-js {
-    left: -30px;
+    left: -35px;
   }
   .btn-next-js {
-    right: -30px;
+    right: -35px;
   }
 }
 @media only screen and (min-width: 1280px) {
-  .btn-prev-js {
-    display: none;
-  }
+  .btn-prev-js,
   .btn-next-js {
     display: none;
   }
@@ -111,6 +105,13 @@
 .icon-next {
   width: 25px;
   height: 25px;
+}
+@media only screen and (min-width: 768px) {
+  .icon-prev,
+  .icon-next {
+  width: 30px;
+  height: 30px;
+}
 }
 .reviews-list {
   display: flex;
