--- a/src/css/common.css
+++ b/src/css/common.css
@@ -13,21 +13,17 @@ body {
   letter-spacing: -0.015em;
   color: #fbfbfb;
 
-  margin: 0;
+  margin: 0 auto;
 }
 
 .container {
   min-width: 320px;
+  max-width: 375px;
+
   margin: 0 auto;
   padding: 0 20px;
   outline: 1px solid red;
   outline-offset: -1px;
-}
-
-@media screen and (max-width: 375px) {
-  .container {
-    max-width: 375px;
-  }
 }
 
 @media screen and (min-width: 768px) {
