--- a/src/partials/1-header.html
+++ b/src/partials/1-header.html
@@ -1,7 +1,7 @@
 <header class="header">
   <div class="header-container container">
     <nav class="header-nav">
-      <a class="header-nav-logo" href="./index.html" aria-label="logo">
+      <a class="header-nav-logo" href="./index.html" aria-label="site logo">
         <svg class="logo-svg" width="16" height="16">
           <use href="/img/icons.svg#logo"></use>
         </svg>
@@ -11,17 +11,24 @@
       </a>
       <ul class="header-nav-list">
         <li class="header-nav-item">
-          <a class="nav-link" href="#howitworks">How It Works</a>
+          <a class="nav-link" href="#howitworks" aria-label="go to how it works section">
+            How It Works
+          </a>
         </li>
         <li class="header-nav-item">
-          <a class="nav-link" href="#vegetables">Vegetables</a>
+          <a class="nav-link" href="#vegetables" aria-label="go to vegetables section">
+            Vegetables
+          </a>
         </li>
         <li class="header-nav-item">
-          <a class="nav-link" href="#reviews">Reviews</a>
+          <a class="nav-link" href="#reviews" aria-label="go to vreviews section">
+            Reviews
+          </a>
         </li>
       </ul>
-      <a class="nav-btn" href="#vegetables" aria-label="button">Shop now</a>
-       <!-- <button class="header-btn" type="button">Shop now</button> -->
+      <a class="nav-btn" href="#vegetables" aria-label="button">
+        Shop now
+      </a>
       <button
         class="nav-btn-mob js-open-menu"
         aria-expanded="false"
@@ -51,21 +58,23 @@
       <nav class="modal-menu-nav">
         <ul class="modal-menu-list">
           <li class="modal-menu-item">
-            <a href="#howitworks" class="modal-menu-link">How It Works</a>
+            <a href="#howitworks" class="modal-menu-link" aria-label="go to how it works section">
+              How It Works
+            </a>
           </li>
           <li class="modal-menu-item">
-            <a href="#vegetables" class="modal-menu-link">Vegetables</a>
+            <a href="#vegetables" class="modal-menu-link" aria-label="go to vegetables section">
+              Vegetables
+            </a>
           </li>
           <li class="modal-menu-item">
-            <a href="#reviews" class="modal-menu-link">Reviews</a>
+            <a href="#reviews" class="modal-menu-link" aria-label="go to vreviews section">
+              Reviews
+            </a>
           </li>
         </ul>
       </nav>
-      <a
-        href="#order"
-        aria-label="butto mobile menu order"
-        class="modal-menu-btn"
-      >
+      <a class="modal-menu-btn" href="#order" aria-label="button mobile menu order">
         Shop now
       </a>
     </div>
