--- a/src/partials/5-vegetables.html
+++ b/src/partials/5-vegetables.html
@@ -22,7 +22,8 @@
           <source media="(min-width: 768px)" srcset="
                /img/5-vegetables/img1-td@1x.png 1x,
                /img/5-vegetables/img1-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img1-mob@1x.png" alt="eggplant" width="282" height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img1-mob@1x.png" alt="eggplant" 
+              width="282" height="196" loading="lazy">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -38,7 +39,8 @@
           <source media="(min-width: 768px)" srcset="
                   /img/5-vegetables/img2-td@1x.png 1x,
                   /img/5-vegetables/img2-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img2-mob@1x.png" alt="leek" width="282" height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img2-mob@1x.png" alt="leek" 
+             width="282" height="196" loading="lazy">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -54,8 +56,8 @@
           <source media="(min-width: 768px)" srcset="
                 /img/5-vegetables/img3-td@1x.png 1x,
                 /img/5-vegetables/img3-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img3-mob@1x.png" alt="mushrooms" width="282"
-            height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img3-mob@1x.png" alt="mushrooms" 
+            width="282" height="196" loading="lazy">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -71,7 +73,8 @@
           <source media="(min-width: 768px)" srcset="
                 /img/5-vegetables/img4-td@1x.png 1x,
                 /img/5-vegetables/img4-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img4-mob@1x.png" alt="corn" width="282" height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img4-mob@1x.png" alt="corn" 
+             width="282" height="196" loading="lazy">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -87,7 +90,8 @@
           <source media="(min-width: 768px)" srcset="
                 /img/5-vegetables/img5-td@1x.png 1x,
                 /img/5-vegetables/img5-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img5-mob@1x.png" alt="potatoes" width="282" height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img5-mob@1x.png" alt="potatoes" 
+             width="282" height="196" loading="lazy">
         </picture>
       </li>
       <li class="vegetables-item">
@@ -102,7 +106,8 @@
           <source media="(min-width: 768px)" srcset="
                 /img/5-vegetables/img6-td@1x.png 1x,
                 /img/5-vegetables/img6-td@2x.png 2x">
-          <img class="vegetables-img" src="/img/5-vegetables/img6-mob@1x.png" alt="carrot" width="282" height="243">
+          <img class="vegetables-img" src="/img/5-vegetables/img6-mob@1x.png" alt="carrot" 
+             width="282" height="196" loading="lazy">
         </picture>
       </li>
     </ul>
